chore(all): update .travis.yml setup.cfg tox.ini

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,8 @@
+# @Author: JanKinCai
+# @Date:   2019-12-12 21:08:32
+# @Last Modified by:   JanKinCai
+# @Last Modified time: 2019-12-12 23:08:08
 # Setup
-
 [metadata]
 description-file = README.rst
 
@@ -7,7 +10,6 @@ description-file = README.rst
 universal = 1
 
 # Sphinx
-
 [build_sphinx]
 source-dir = docs/source
 build-dir = docs/build
@@ -17,21 +19,18 @@ all_files = 1
 upload-dir = docs/build/html
 
 # Test
-
 [flake8]
 max-line-length = 120
-ignore = W292,E303
+ignore = W292,E303, E2301
 exclude =
     __init__.py
     setup.py
-    base.py
 
 # Bumpversion
-
 [bumpversion]
 current_version = 0.1.0
-# commit = True
-# tag = True
+commit = True
+tag = True
 
 [bumpversion:file:setup.py]
 
