--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+# @Author: JanKinCai
+# @Date:   2019-12-12 21:10:00
+# @Last Modified by:   JanKinCai
+# @Last Modified time: 2019-12-12 21:10:00
 language: python
 
 dist: bionic
@@ -7,7 +11,6 @@ python:
   - 3.7
   - 3.6
   - 3.5
-  - 2.7
 
 install:
   - pip install -U tox-travis
