--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
+# @Author: JanKinCai
+# @Date:   2019-12-12 21:07:22
+# @Last Modified by:   JanKinCai
+# @Last Modified time: 2019-12-12 21:07:22
 [tox]
-envlist = py27, py35, py36, pypy, flake8, lint
-
+envlist = py35, py36, pypy, flake8, lint
 skipsdist = True
-
-requires =
+# requires =
 
 [testenv]
 deps = -r{toxinidir}/requirements/test.txt
@@ -16,9 +18,9 @@ commands = flake8 interact
 
 [testenv:lint]
 deps = pre-commit
-commands = 
+commands =
 	python -m pre_commit run
 	{posargs:--all}
-extras = 
+extras =
 skip_install = True
 usedevelop = false
