chore(tox.ini): update tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # @Author: JanKinCai
 # @Date:   2019-12-12 21:07:22
 # @Last Modified by:   JanKinCai
-# @Last Modified time: 2019-12-12 21:07:22
+# @Last Modified time: 2019-12-24 22:48:38
 [tox]
 envlist = py35, py36, pypy, flake8, lint
 skipsdist = True
@@ -11,16 +11,16 @@ skipsdist = True
 deps = -r{toxinidir}/requirements/test.txt
 commands = pytest
 
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 interact
+# [testenv:flake8]
+# basepython = python
+# deps = flake8
+# commands = flake8 interact
 
-[testenv:lint]
-deps = pre-commit
-commands =
-	python -m pre_commit run
-	{posargs:--all}
-extras =
-skip_install = True
-usedevelop = false
+# [testenv:lint]
+# deps = pre-commit
+# commands =
+# 	python -m pre_commit run
+# 	{posargs:--all}
+# extras =
+# skip_install = True
+# usedevelop = false
