chore(tox.ini): update tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 # @Author: JanKinCai
 # @Date:   2019-12-12 21:07:22
 # @Last Modified by:   JanKinCai
-# @Last Modified time: 2019-12-24 22:48:38
+# @Last Modified time: 2019-12-25 17:51:32
 [tox]
-envlist = py35, py36, pypy, flake8, lint
-skipsdist = True
+envlist = py36, flake8, lint
+; skipsdist = True
 # requires =
 
 [testenv]
